Update beatworld image.

--- a/partners/index.html
+++ b/partners/index.html
@@ -98,8 +98,8 @@
                   </button>
                 </div>
                 <div class="p-2 hidden md:block">
-                  <img src="/beatworld.png" alt="Music Production" class="w-full h-full object-cover rounded-xl">
-                </div>
+                  <img src="/beatworld_marketing2.png" alt="Music Production" class="w-full h-full object-cover rounded-xl">
+              </div>
               </div>
             </div>
           </div>
