--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </p>
 
       <div class="flex justify-center gap-4 mb-20">
-        <button onclick="window.open('https://copilot-chat-frontend.vercel.app/', '_blank')"
+        <button
           class="inline-flex items-center px-6 py-2.5 bg-blue-500/10 text-white border border-blue-500/20 rounded-lg hover:bg-blue-500/20 transition text-sm font-medium">
           Copilot Coming Soon
           <i data-lucide="arrow-up-right" class="w-4 h-4 ml-2 text-green-400 arrow"></i>
